--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://santatsut.github.io/serenShop",
   "name": "newvitereact",
   "private": true,
   "version": "0.0.0",
@@ -33,6 +34,5 @@
     "gh-pages": "^6.3.0",
     "globals": "^15.9.0",
     "vite": "^5.4.1"
-  },
-  "homepage": "https://santatsut.github.io/serenShop/"
+  }
 }
